Add list manipulation and random avatar generation
Extended functionality in MultiShotChat to include list management operations (add and clear functions). Also implemented random avatar generation for user and AI. Refactored server code to simplify token processing and included more specific system message text. Commented out the welcome message in +page.svelte.

--- a/ui/tsconfig.json
+++ b/ui/tsconfig.json
@@ -1,6 +1,7 @@
 {
 	"extends": "./.svelte-kit/tsconfig.json",
 	"compilerOptions": {
+		"lib": ["ES2020", "DOM", "DOM.Iterable"],
 		"allowJs": true,
 		"checkJs": true,
 		"esModuleInterop": true,
