--- a/ui/package.json
+++ b/ui/package.json
@@ -42,6 +42,7 @@
   "dependencies": {
     "@floating-ui/dom": "1.6.5",
     "deep-chat": "^1.4.11",
-    "highlight.js": "11.9.0"
+    "highlight.js": "11.9.0",
+    "marked": "^5.0.0"
   }
 }
