Refactor code and add example.env file
The code has been refactored with a more specific function to handle chat history and to improve the AsyncIterable method. Example.env file has been added to illustrate the environmental variables needed for the application. The version of node for the UI is also specified in package.json.

--- a/ui/package.json
+++ b/ui/package.json
@@ -1,6 +1,9 @@
 {
   "name": "ui-skeleton",
   "version": "0.0.1",
+  "engines": {
+    "node": "18.8.0"
+  },
   "private": true,
   "scripts": {
     "dev": "vite dev",
