--- a/ui/package.json
+++ b/ui/package.json
@@ -35,10 +35,11 @@
     "prettier-plugin-svelte": "^3.1.2",
     "svelte": "^4.2.7",
     "svelte-check": "^3.6.0",
+    "svelte-hero-icons": "^5.2.0",
     "tailwindcss": "3.4.4",
     "tslib": "^2.4.1",
     "typescript": "^5.0.0",
-    "vite": "^5.3.1",
+    "vite": "^5.3.5",
     "vite-plugin-tailwind-purgecss": "0.3.3"
   },
   "type": "module",
