--- a/ui/package.json
+++ b/ui/package.json
@@ -16,6 +16,8 @@
     "format": "prettier --write ."
   },
   "devDependencies": {
+    "@iconify-json/material-symbols": "^1.1.85",
+    "@iconify/svelte": "^4.0.2",
     "@skeletonlabs/skeleton": "2.10.1",
     "@skeletonlabs/tw-plugin": "0.4.0",
     "@sveltejs/adapter-auto": "^3.0.0",
@@ -40,6 +42,7 @@
     "tailwindcss": "3.4.4",
     "tslib": "^2.4.1",
     "typescript": "^5.0.0",
+    "unplugin-icons": "^0.19.0",
     "vite": "^5.3.5",
     "vite-plugin-tailwind-purgecss": "0.3.3"
   },
