added some security

--- a/server/example.env
+++ b/server/example.env
@@ -3,5 +3,5 @@ OPENAI_API_KEY=none
 GROQ_API_KEY=none
 OLLAMA_API_KEY=ollama
 GOOGLE_API_KEY=none
-
+# test that the environment variables load
 TEST_SETTING=test
