added some security

--- a/server/example.env
+++ b/server/example.env
@@ -1,3 +1,8 @@
+# note that in ../ui/src/routes/types.ts
+# the key is refered to as "apiKeyName": "OPENAI_API"
+# but "_KEY" is added by the server to locate the
+# key in the ../server/.env file
+# removing the "_KEY" may prevent quality check alerts
 ANTHROPIC_API_KEY=none
 OPENAI_API_KEY=none
 GROQ_API_KEY=none
