--- a/server/example.env
+++ b/server/example.env
@@ -1,4 +1,7 @@
-# note that in ../ui/src/routes/types.ts
+# copy this file to ../server/.env
+# and add your keys from AI providers/platforms
+#
+# Note: in ../ui/src/routes/types.ts
 # the key is refered to as "apiKeyName": "OPENAI_API"
 # but "_KEY" is added by the server to locate the
 # key in the ../server/.env file
