--- a/ui/package.json
+++ b/ui/package.json
@@ -48,6 +48,7 @@
   },
   "dependencies": {
     "@floating-ui/dom": "1.6.5",
+    "@mlc-ai/web-llm": "^0.2.52",
     "deep-chat": "^1.4.11",
     "highlight.js": "11.9.0",
     "marked": "^5.0.0",
