--- a/ui/package.json
+++ b/ui/package.json
@@ -44,7 +44,7 @@
     "typescript": "^5.0.0",
     "unplugin-icons": "^0.19.0",
     "vite": "^5.3.5",
-    "vite-plugin-tailwind-purgecss": "0.3.3"
+    "vite-plugin-tailwind-purgecss": "^0.3.3"
   },
   "dependencies": {
     "@floating-ui/dom": "1.6.5",
