--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,8 +14,10 @@
       "request": "launch",
       "name": "ui",
       "cwd": "${workspaceFolder}/ui",
-      "runtimeExecutable": "npm",
-      "runtimeArgs": ["run", "dev", "--", "--port=3333"],
+      //"runtimeExecutable": "npm",
+      // "runtimeArgs": ["run", "dev", "--", "--port=3333"],
+      "runtimeExecutable": "pnpm",
+      "runtimeArgs": ["exec", "vite", "--port=3333"],
       "console": "integratedTerminal"
     },
     {
