--- a/ui/package.json
+++ b/ui/package.json
@@ -53,7 +53,8 @@
     "@mlc-ai/web-llm": "^0.2.52",
     "deep-chat": "^1.4.11",
     "highlight.js": "11.9.0",
-    "marked": "^5.0.0",
-    "marked-highlight": "^2.1.3"
+    "marked": "^5.1.2",
+    "marked-highlight": "^2.1.4",
+    "marked-mangle": "^1.1.9"
   }
 }
