--- a/ui/package.json
+++ b/ui/package.json
@@ -27,6 +27,7 @@
     "@sveltejs/vite-plugin-svelte": "^3.0.0",
     "@tailwindcss/forms": "0.5.7",
     "@tailwindcss/typography": "0.5.13",
+    "@types/dompurify": "^3.0.5",
     "@types/eslint": "^8.56.0",
     "@types/node": "20.14.7",
     "@typescript-eslint/eslint-plugin": "^7.0.0",
@@ -52,6 +53,7 @@
     "@floating-ui/dom": "1.6.5",
     "@mlc-ai/web-llm": "^0.2.52",
     "deep-chat": "^1.4.11",
+    "dompurify": "^3.1.7",
     "highlight.js": "11.9.0",
     "marked": "^5.1.2",
     "marked-highlight": "^2.1.4",
